--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Build-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="spriteMaker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="spriteMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,13 +26,23 @@
                                             <constraint firstAttribute="width" secondItem="TCc-KW-16w" secondAttribute="height" multiplier="1:1" id="S2c-N3-fUM"/>
                                         </constraints>
                                     </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dzC-HV-qEe">
+                                        <rect key="frame" x="20" y="255" width="374" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="DXP-N2-naJ"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <viewLayoutGuide key="safeArea" id="gDF-CB-5Tp"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="TCc-KW-16w" secondAttribute="trailing" constant="20" id="2bf-02-TBp"/>
+                                    <constraint firstItem="gDF-CB-5Tp" firstAttribute="trailing" secondItem="dzC-HV-qEe" secondAttribute="trailing" constant="20" id="AcJ-rv-7Bk"/>
+                                    <constraint firstItem="dzC-HV-qEe" firstAttribute="leading" secondItem="gDF-CB-5Tp" secondAttribute="leading" constant="20" id="BfL-T4-cYy"/>
                                     <constraint firstItem="TCc-KW-16w" firstAttribute="leading" secondItem="pqM-zc-1iQ" secondAttribute="leading" constant="20" id="KFM-Vb-xzz"/>
                                     <constraint firstAttribute="bottom" secondItem="TCc-KW-16w" secondAttribute="bottom" constant="20" id="XLF-YV-cTW"/>
+                                    <constraint firstItem="TCc-KW-16w" firstAttribute="top" secondItem="dzC-HV-qEe" secondAttribute="bottom" constant="20" id="v5K-93-rbK"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -48,6 +58,7 @@
                     <tabBarItem key="tabBarItem" title="Build" image="hammer.fill" catalog="system" id="fTF-WR-bO9"/>
                     <connections>
                         <outlet property="canvasView" destination="TCc-KW-16w" id="52t-N2-emx"/>
+                        <outlet property="preview" destination="dzC-HV-qEe" id="cah-24-zhZ"/>
                         <outlet property="viewController" destination="8bC-Xf-vdC" id="WKZ-eE-VEP"/>
                     </connections>
                 </viewController>
