--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,23 +27,35 @@
                                             <constraint firstAttribute="width" secondItem="TCc-KW-16w" secondAttribute="height" multiplier="1:1" id="S2c-N3-fUM"/>
                                         </constraints>
                                     </view>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dzC-HV-qEe">
-                                        <rect key="frame" x="20" y="255" width="374" height="100"/>
-                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Guq-Lg-67e">
+                                        <rect key="frame" x="20" y="20" width="374" height="335"/>
+                                        <subviews>
+                                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3jb-7j-2ml">
+                                                <rect key="frame" x="0.0" y="184.5" width="374" height="150.5"/>
+                                                <connections>
+                                                    <segue destination="uFU-s4-G1B" kind="embed" id="ddG-2Z-Ezy"/>
+                                                </connections>
+                                            </containerView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="DXP-N2-naJ"/>
+                                            <constraint firstItem="3jb-7j-2ml" firstAttribute="height" secondItem="Guq-Lg-67e" secondAttribute="height" multiplier="0.45" id="1hW-AQ-bLD"/>
+                                            <constraint firstItem="3jb-7j-2ml" firstAttribute="centerX" secondItem="Guq-Lg-67e" secondAttribute="centerX" id="9wo-7a-2Cg"/>
+                                            <constraint firstAttribute="bottom" secondItem="3jb-7j-2ml" secondAttribute="bottom" id="bhw-Uv-iEZ"/>
+                                            <constraint firstItem="3jb-7j-2ml" firstAttribute="width" secondItem="Guq-Lg-67e" secondAttribute="width" id="qZT-Xp-zoJ"/>
                                         </constraints>
-                                    </imageView>
+                                    </view>
                                 </subviews>
                                 <viewLayoutGuide key="safeArea" id="gDF-CB-5Tp"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="TCc-KW-16w" secondAttribute="trailing" constant="20" id="2bf-02-TBp"/>
-                                    <constraint firstItem="gDF-CB-5Tp" firstAttribute="trailing" secondItem="dzC-HV-qEe" secondAttribute="trailing" constant="20" id="AcJ-rv-7Bk"/>
-                                    <constraint firstItem="dzC-HV-qEe" firstAttribute="leading" secondItem="gDF-CB-5Tp" secondAttribute="leading" constant="20" id="BfL-T4-cYy"/>
+                                    <constraint firstItem="TCc-KW-16w" firstAttribute="top" secondItem="Guq-Lg-67e" secondAttribute="bottom" constant="20" id="ANk-UU-jmr"/>
+                                    <constraint firstItem="Guq-Lg-67e" firstAttribute="width" secondItem="TCc-KW-16w" secondAttribute="width" id="G4a-ce-l8W"/>
                                     <constraint firstItem="TCc-KW-16w" firstAttribute="leading" secondItem="pqM-zc-1iQ" secondAttribute="leading" constant="20" id="KFM-Vb-xzz"/>
                                     <constraint firstAttribute="bottom" secondItem="TCc-KW-16w" secondAttribute="bottom" constant="20" id="XLF-YV-cTW"/>
-                                    <constraint firstItem="TCc-KW-16w" firstAttribute="top" secondItem="dzC-HV-qEe" secondAttribute="bottom" constant="20" id="v5K-93-rbK"/>
+                                    <constraint firstItem="Guq-Lg-67e" firstAttribute="top" secondItem="gDF-CB-5Tp" secondAttribute="top" constant="20" id="dt2-6Y-wbZ"/>
+                                    <constraint firstItem="Guq-Lg-67e" firstAttribute="centerX" secondItem="TCc-KW-16w" secondAttribute="centerX" id="nWE-fq-Kfi"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -58,13 +71,13 @@
                     <tabBarItem key="tabBarItem" title="Build" image="hammer.fill" catalog="system" id="fTF-WR-bO9"/>
                     <connections>
                         <outlet property="canvasView" destination="TCc-KW-16w" id="52t-N2-emx"/>
-                        <outlet property="preview" destination="dzC-HV-qEe" id="cah-24-zhZ"/>
+                        <outlet property="previewGif" destination="iWI-WY-y81" id="uqa-hA-s58"/>
                         <outlet property="viewController" destination="8bC-Xf-vdC" id="WKZ-eE-VEP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="930.80357142857133"/>
+            <point key="canvasLocation" x="-865.21739130434787" y="930.80357142857133"/>
         </scene>
         <!--play-->
         <scene sceneID="huF-zb-pGO">
@@ -80,7 +93,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="grd-hJ-zfE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1065" y="931"/>
+            <point key="canvasLocation" x="1346" y="931"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4fc-tc-pMB">
@@ -101,6 +114,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wb5-Ij-frO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="118.52678571428571"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="BJ4-Fd-G1U">
+            <objects>
+                <viewController id="uFU-s4-G1B" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Owq-ru-qCe">
+                        <rect key="frame" x="0.0" y="0.0" width="374" height="150.5"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iWI-WY-y81">
+                                <rect key="frame" x="0.0" y="0.0" width="150.5" height="150.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="iWI-WY-y81" secondAttribute="height" multiplier="1:1" id="Jnm-qy-xt1"/>
+                                </constraints>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="K9A-e9-ynQ">
+                                <rect key="frame" x="150.5" y="0.0" width="223.5" height="150.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zVg-ZD-bLo">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="aVj-iK-jNN">
+                                        <rect key="frame" x="48" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Z2e-zz-5TB">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xzn-Kx-BAq">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="xzn-Kx-BAq" secondAttribute="trailing" id="SQ0-C0-NPa"/>
+                                                <constraint firstItem="xzn-Kx-BAq" firstAttribute="leading" secondItem="Z2e-zz-5TB" secondAttribute="leading" id="dOo-LC-yma"/>
+                                                <constraint firstItem="xzn-Kx-BAq" firstAttribute="top" secondItem="Z2e-zz-5TB" secondAttribute="top" id="gE6-C1-WEx"/>
+                                                <constraint firstAttribute="bottom" secondItem="xzn-Kx-BAq" secondAttribute="bottom" id="tEd-5i-4QB"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="K9A-e9-ynQ" secondAttribute="trailing" id="JCo-5P-Ivg"/>
+                            <constraint firstItem="iWI-WY-y81" firstAttribute="leading" secondItem="Owq-ru-qCe" secondAttribute="leading" id="UNT-0X-tfV"/>
+                            <constraint firstItem="K9A-e9-ynQ" firstAttribute="leading" secondItem="iWI-WY-y81" secondAttribute="trailing" id="Y1Y-mx-oIQ"/>
+                            <constraint firstItem="iWI-WY-y81" firstAttribute="height" secondItem="Owq-ru-qCe" secondAttribute="height" id="dKH-tg-PPw"/>
+                            <constraint firstAttribute="bottom" secondItem="iWI-WY-y81" secondAttribute="bottom" id="jAc-IM-aoF"/>
+                            <constraint firstItem="K9A-e9-ynQ" firstAttribute="height" secondItem="iWI-WY-y81" secondAttribute="height" id="mtn-IK-3Et"/>
+                            <constraint firstItem="iWI-WY-y81" firstAttribute="centerY" secondItem="K9A-e9-ynQ" secondAttribute="centerY" id="zoz-Ae-mxJ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nhJ-6y-BhB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-75.362318840579718" y="930.80357142857133"/>
         </scene>
     </scenes>
     <resources>
